# fideslang

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  data_categories.csv  data_categories.json  data_categories.yml  data_qualifiers.csv  data_qualifiers.json  data_qualifiers.yml  data_subjects.csv  data_subjects.json  data_subjects.yml  data_uses.csv  data_uses.json  data_uses.yml  dev-requirements.txt  docker-compose.yml  implementation.md  index.html  new_data_uses.csv  new_data_uses.json  new_data_uses.yml  noxfile.py  optional-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: docker.yaml  matrix.yaml  pr_checks.yml  publish_docs.yaml  publish_package.yaml
css/: logo.css  taxonomy.css
csv/: data_categories.csv  data_subjects.csv  data_uses.csv
csv-tmp2/: data_categories.csv
data_files/: data_categories.csv  data_categories.json  data_categories.yml  data_qualifiers.csv  data_qualifiers.json  data_qualifiers.yml  data_subjects.csv  data_subjects.json  data_subjects.yml  data_uses.csv  data_uses.json  data_uses.yml
data_files/temp/: data_subjects.yml
data_files/temp2/: data_subjects.yml  data_uses.json
data_filess/ad/: data_categories.csv  data_subjects.csv  data_uses.csv
data_filess/temp1/: data_categories.yml  data_qualifiers.json  data_uses.yml
data_filess/temp2/: data_subjects.json
demo_resources/: demo_dataset.yml  demo_extended_taxonomy.yml  demo_policy.yml  demo_system.yml
docs/: 404.html  data_subject_categories.md  explorer.md  index.html  mkdocs.yml  sitemap.xml
docs/css/: styles.css
docs/data_categories/: index.html
docs/data_identification_qualifiers/: index.html
docs/data_qualifiers/: index.html
docs/data_subject_categories/: index.html
docs/data_subjects/: index.html
docs/data_use_categories/: index.html
docs/data_uses/: index.html
docs/docs/: explorer.md  index.md  license.md  syntax.md
docs/docs/js/: vis.js
docs/explorer/: index.html
docs/js/: vis2.js
docs/license/: index.html
docs/search/: search_index.json
docs/site/: index.html
docs/site/css/: styles.css
docs/site/data_identification_qualifiers/: index.html
docs/site/explorer/: index.html
docs/site/license/: index.html
docs/site/search/: search_index.json
docs/site/syntax/: index.html
docs/syntax/: index.html
draft/: index.html
explorer/: index.html
js/: vis.js  visdraft.js
license/: index.html
mkdocs/: Dockerfile  mkdocs.yml  requirements.txt
mkdocs/docs/: data_categories.md  data_identification_qualifiers.md  data_qualifiers.md  data_subject_categories.md  data_subjects.md  data_use_categories.md  data_uses.md  draft.md  explorer.md  index.md  license.md  overview.md  syntax.md
mkdocs/docs/css/: fides.css  logo.css  styles.css  taxonomy.css
mkdocs/docs/csv/: data_categories.csv  data_elements.csv  data_qualifiers.csv  data_subjects.csv  data_uses.csv
mkdocs/docs/csv-tmp/: data_categories.csv  data_uses.csv
mkdocs/docs/csv/tmp/: data_categories.csv  data_uses.csv
mkdocs/docs/js/: vis.js  vis2-absolute.js  vis2.js  visdraft.js
mkdocs/docs/resources/: dataset.md  overview.md  policy.md  registry.md  system.md
mkdocs/docs/taxonomy/: data_categories.md  data_qualifiers.md  data_subjects.md  data_uses.md  overview.md
mkdocs/overrides/partials/: footer.html
mkdocs/site/: 404.html  index.html  sitemap.xml
mkdocs/site/csv/: data_qualifiers.csv
mkdocs/site/data_categories/: index.html
mkdocs/site/data_qualifiers/: index.html
mkdocs/site/data_subjects/: index.html
mkdocs/site/data_uses/: index.html
mkdocs/site/explorer/: index.html
mkdocs/site/license/: index.html
mkdocs/site/syntax/: index.html
overview/: index.html
resources/dataset/: index.html
resources/organization/: index.html
resources/policy/: index.html
resources/system/: index.html
scripts/: README.md  convert_data_categories_csv_format.py  convert_yaml_format.py  export_default_taxonomy.py  import_from_fidesctl.sh
search/: search_index.json
site/: 404.html
site/data_use_categories/: index.html
site/js/: vis.js
src/fideslang/: __init__.py  _version.py  default_fixtures.py  default_taxonomy.py  manifests.py  models.py  parse.py  relationships.py  utils.py  validation.py
src/fideslang/default_taxonomy/: __init__.py  data_categories.py  data_qualifiers.py  data_subjects.py  data_uses.py  organizations.py  utils.py
src/fideslang/gvl/: __init__.py  gvl_data_category_mapping.json  gvl_data_use_mapping.json  gvl_feature_mapping.json  models.py
syntax/: index.html
taxonomy/data_categories/: index.html
taxonomy/data_subjects/: index.html
taxonomy/data_uses/: index.html
taxonomy/overview/: index.html
tests/: conftest.py
tests/data/: failing_dataset_collection_taxonomy.yml  failing_dataset_field_taxonomy.yml  failing_dataset_taxonomy.yml  failing_declaration_taxonomy.yml  failing_nested_dataset.yml  passing_declaration_taxonomy.yml  sample_hierarchy_figures.json
tests/fideslang/: test_default_taxonomy.py  test_manifests.py  test_models.py  test_parse.py  test_relationships.py  test_validation.py
tests/fideslang/gvl/: test_gvl.py
~docs/: data_categories.md  data_identification_qualifiers.md  data_use_categories.md  index.md  taxonomy_expolorer.md
